# Windows_32

./: CMakeLists.txt  README.md  partitions_lvgl.csv  sdkconfig  sdkconfig.old
components/gt911/: gt911.c  gt911.h
components/lvgl/: Kconfig  lv_conf.h  lv_conf_template.h  lvgl.h
components/lvgl/demos/ui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_3d_printer_bg_png.c  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_btn_main_off_png.c  ui_img_btn_main_on_png.c  ui_img_btn_move_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_png.c  ui_img_btn_print_top_off_png.c  (+15 more)
components/lvgl/src/: lv_conf_internal.h
components/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1095992510.c  ui_img_1214273956.c  ui_img_1393274193.c  ui_img_1890958998.c  ui_img_196738267.c  ui_img_1_png.c  ui_img_2_png.c  ui_img_473727351.c  ui_img_application_png.c  ui_img_battery_png.c  ui_img_bt_png.c  ui_img_cd_drive_png.c  ui_img_charge_png.c  ui_img_chr_home_png.c  ui_img_chr_qr_png.c  ui_img_chr_r_png.c  ui_img_close_png.c  ui_img_cloudy_png.c  ui_img_computer_png.c  ui_img_cortana_png.c  ui_img_desktop_files_png.c  ui_img_documents_png.c  ui_img_downloads_png.c  ui_img_flx_bg_png.c  ui_img_flx_r_png.c  ui_img_folder_png.c  ui_img_g_play_png.c  ui_img_hard_drive_png.c  ui_img_information_png.c  ui_img_inside_png.c  ui_img_internet_png.c  ui_img_ios_png.c  ui_img_logo_panlee_png.c  (+21 more)
main/: CMakeLists.txt  board.h  main.c  screen.c
(+4 files in other folders)
